# M-Compiler

./: Cargo.toml  README.md  binomial-dist.m  flake.nix  function-ir.clif  generate_expression.py  grammar.bnf  input-cp.m  input-full.m  input.m  input.txt  main.py  module.m  module.txt  output.txt  run.cmd  rustfmt.toml  slice-cp.m  slice.m  wasteland.m
bitfields/: Cargo.toml
bitfields/src/: lib.rs
bnf/: grammar.bnf  input.bnf  main.rs
compiler/: Cargo.toml
compiler/src/: declarations.rs  errors.rs  function.rs  hir.rs  layout.rs  local.rs  main.rs  top_level_resolution.rs  translate.rs  type_resolution.rs  wow.txt
compiler/src/hir/: builder.rs  inferer.rs
examples/: binomial-dist.m  input.m  nuclear-waste.m  slice.m  sort.m
intellisense/m-language-support/syntaxes/: m.tmLanguage.json
intellisense/m_intellisense/: Cargo.toml
macros/: Cargo.toml
macros/src/: lib.rs  spanned.rs
parser/: Cargo.toml  grammar.pest  lib.rs
parser legacy/: Cargo.toml
parser legacy/rand_derive/src/: rand.rs
parser legacy/src/ast/: data_type.rs  mod.rs
parser old/: Cargo.toml
parser old/spans/span_derive/: Cargo.toml
parser old/spans/span_derive/src/: lib.rs
parser old/src/: lib.rs  parser.rs
parser old/src/ast/: data_type.rs
parser old/src/ast/declaration/: local.rs
parser old/src/ast/expression/literal/: number.rs
parser old/src/ast/expression/literal/number/: float.rs
parser/rand_derive/: Cargo.toml
parser/rand_derive/src/: lib.rs  rand.rs
parser/span_derive/src/: lib.rs
parser/spans/span/: Cargo.toml
parser/src/: ast.rs  errors.rs  expression.rs  lib.rs  parser.rs  prelude.rs  scope.rs  text.txt  to_implement.rs  top_level.rs  whitespace.rs
parser/src/ast/: declaration.rs  expression.rs  (+3 more)
pest/: calculator.pest  grammar-old.pest  grammar.pest  main.rs  parser.rs  pest.pest  test.csv  test.rs  validator.rs
pest/parser/: expressions.rs
resolution/: Cargo.toml
resolution/src/: lib.rs  module.rs  modules.rs
specification/: Cargo.toml  grammar
specification/docs/: alternative.txt  decisions.md  pointers.md
src/: bench.rs  calc.rs  grammar.pest  main.rs  parser.rs  test.rs  tests.rs  tokenizer.rs  utils.rs
src/parser/: declarations.rs  expressions.rs  mod.rs
src/tokenizer/: mod.rs
src/tokens/: identifier.rs  keyword.rs  list.rs  mod.rs  number.rs  string.rs  types.rs  utils.rs  whitespace.rs
std/: http.m  index.m  integer.m  iterator.m
std/tokeniser/: token.m  tokeniser.m
tokenizer/: Cargo.toml
tokenizer old/: Cargo.toml
tokenizer/src/: lib.rs
translate/: Cargo.toml
translate/src/: lib.rs
vscode-language-support/: CHANGELOG.md  README.md  package.json
(+73 files in other folders)
