[workspace]
members = ["parser", "compiler", "tokenizer", "bitfields"]
default-run = "compiler"
resolver = "2"

[workspace.dependencies]
itertools = "0.13"
thiserror = "1.0"
cranelift = "0.111"
cranelift-jit = "0.111"
cranelift-module = "0.111"
cranelift-native = "0.111"
cranelift-reader = "0.111"
miette = "7.6"
ahash = "0.8"
ariadne = "0.6"
