[package]
name = "bitfields"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
heck = "0.5"
itertools.workspace = true
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
ahash.workspace = true

