[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

[dependencies]
translate = { path = "../translate" }
parser = { path = "../parser" }
itertools = "0.11.0"
cranelift = "0.100"
cranelift-jit = "0.100"
cranelift-module = "0.100"
cranelift-native = "0.100"
cranelift-reader = "0.100"
thiserror = "1.0.50"
