[package]
name = "translate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cranelift = "0.98"
cranelift-jit = "0.98"
cranelift-module = "0.98"
cranelift-native = "0.98"
cranelift-reader = "0.98"
parser = { path = "../parser" }